# Innova.Application/DTOs/Comment/CreateCommentDto.cs
@@ -1,0 +1,6 @@
+namespace Innova.Application.DTOs.Comment;
+
+public class CreateCommentDto
+{
+    public string Content { get; set; } = string.Empty;
+}
