# Innova.Application/DTOs/Comment/UpdateCommentDto.cs
@@ -1,0 +1,6 @@
+namespace Innova.Application.DTOs.Comment;
+
+public class UpdateCommentDto
+{
+    public string Content { get; set; } = string.Empty;
+}
